add google map location and email link to navbar

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,13 +24,14 @@
         </div>
 
         <div class="col-6 header-item">
-          <a href="tel:+17038796500">
-            <label>4326 Dale Boulevard, Suite 8, Woodbridge, VA</label>
+          <a href=
+          "https://www.google.com/maps/place/4326+Dale+Blvd+%238,+Woodbridge,+VA+22193,+USA/@38.6481644,-77.3405033,17z/data=!3m1!4b1!4m5!3m4!1s0x89b657c9643a562b:0xd98698700253593b!8m2!3d38.6481644!4d-77.33832">
+        <label>4326 Dale Boulevard, Suite 8, Woodbridge, VA</label>
           </a>
         </div>
 
         <div class="col-3 header-item">
-          <a href="tel:+17038796500">
+          <a href= "mailto:adj23@comcast.net">
             <label>adj23@comcast.net</label>
           </a>
         </div>
