add email link to classes page navbar

--- a/views/classes.ejs
+++ b/views/classes.ejs
@@ -30,7 +30,7 @@
       </div>
 
       <div class="col-3 header-item">
-        <a href="tel:+17038796500">
+        <a href= "mailto:adj23@comcast.net">
           <label>adj23@comcast.net</label>
         </a>
       </div>
