--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,20 +17,20 @@
     <div class="container" id="header">
       <div class="row">
 
-        <div class="col-3 header-item">
+        <div class="col-4">
           <a href="tel:+17038796500">
             <label>703 730-8525</label>
           </a>
         </div>
 
-        <div class="col-6 header-item">
+        <div class="col-4">
           <a href=
           "https://www.google.com/maps/place/4326+Dale+Blvd+%238,+Woodbridge,+VA+22193,+USA/@38.6481644,-77.3405033,17z/data=!3m1!4b1!4m5!3m4!1s0x89b657c9643a562b:0xd98698700253593b!8m2!3d38.6481644!4d-77.33832">
         <label>4326 Dale Boulevard, Suite 8, Woodbridge, VA</label>
           </a>
         </div>
 
-        <div class="col-3 header-item">
+        <div class="col-4">
           <a href= "mailto:adj23@comcast.net">
             <label>adj23@comcast.net</label>
           </a>
@@ -69,7 +69,7 @@
       <div class="row">
         <div class="col">
           <h3 id="choose_class">
-              Choose a class below to learn more
+              Choose a class
           </h3>
         </div>
       </div>
@@ -87,7 +87,7 @@
           />
           <h3>Driver Improvement</h3>
           <h3>In-Person</h3>
-          <p>Learn more about this class</p>
+          <p>Learn more</p>
         </a>
       </div>
 
@@ -100,7 +100,7 @@
           />
           <h3>Driver Improvement</h3>
           <h3>Online</h3>
-          <p>Learn more about this class</p>
+          <p>Learn more</p>
         </a>
       </div>
 
@@ -112,7 +112,7 @@
             alt="logo"
           />
           <h3>DMV 3 Times Failed</h3>
-          <p>Learn more about this class</p>
+          <p>Learn more</p>
         </a>
       </div>
 
@@ -131,7 +131,7 @@
             alt="logo"
           />
           <h3> Reckless/Aggressive</h3>
-          <p>Learn more about this class</p>
+          <p>Learn more</p>
         </a>
       </div>
 
@@ -143,7 +143,7 @@
             alt="logo"
           />
           <h3>In-Car/On-Road Driver Training</h3>
-          <p>Learn more about this class</p>
+          <p>Learn more</p>
         </a>
       </div>
 
@@ -155,7 +155,7 @@
             alt="logo"
           />
           <h3>Clases en Español</h3>
-          <p>Aprende más sobre estas clases</p>
+          <p>Aprende más</p>
         </a>
       </div>
 
