--- a/views/index.ejs
+++ b/views/index.ejs
@@ -78,7 +78,7 @@
     <div class="container">      
     <div class="row" id="first_row">
 
-      <div class="col-4 class_cards">
+      <div class="col-6 class_cards">
         <a href="/classes" class="card index_page_card">
           <img
             src="/images/driver-Improvement.png"
@@ -91,7 +91,7 @@
         </a>
       </div>
 
-      <div class="col-4 class_cards">
+      <div class="col-6 class_cards">
         <a href="/classes/#online" class="card index_page_card">
           <img
             src="/images/online-class-image.png"
@@ -103,8 +103,14 @@
           <p>Learn more</p>
         </a>
       </div>
+      
+    </div>
+    </div>
 
-      <div class="col-4 class_cards">
+    <div class="container"> 
+      <div class="row" id="second_row">
+
+      <div class="col-6 class_cards">
         <a href="/classes/#3-times" class="card index_page_card">
           <img
             src="/images/driver-manual-icon.png"
@@ -116,38 +122,38 @@
         </a>
       </div>
 
-    </div>
-  </div>
 
-      
-  <div class="container">
-      <div class="row" id="second_row">
+      <div class="col-6 class_cards">
+          <a href="/classes/#reckless" class="card index_page_card">
+            <img
+              src="/images/Reckless-Aggressive-class.png"
+              class="icons"
+              alt="logo"
+            />
+            <h3> Reckless/Aggressive</h3>
+            <p>Learn more</p>
+          </a>
+        </div>
 
-        <div class="col-4 class_cards">
-        <a href="/classes/#reckless" class="card index_page_card">
-          <img
-            src="/images/Reckless-Aggressive-class.png"
-            class="icons"
-            alt="logo"
-          />
-          <h3> Reckless/Aggressive</h3>
-          <p>Learn more</p>
-        </a>
+        </div>
       </div>
 
-      <div class="col-4 class_cards">
-        <a href="/classes/#in-car" class="card index_page_card">
-          <img
-            src="/images/license-icon.png"
-            class="icons"
-            alt="logo"
-          />
-          <h3>In-Car/On-Road Driver Training</h3>
-          <p>Learn more</p>
-        </a>
+    <div class="container"> 
+      <div class="row" id="third_row">
+
+        <div class="col-6 class_cards">
+          <a href="/classes/#in-car" class="card index_page_card">
+            <img
+              src="/images/license-icon.png"
+              class="icons"
+              alt="logo"
+            />
+            <h3>In-Car/On-Road Driver Training</h3>
+            <p>Learn more</p>
+          </a>
       </div>
 
-      <div class="col-4 class_cards">
+      <div class="col-6 class_cards">
         <a href="/classes/#espanol" class="card index_page_card">
           <img
             src="/images/Clases-en-Espanol.png"
@@ -160,7 +166,50 @@
       </div>
 
     </div>
+  </div>
+
+      
+  <!-- <div class="container">
+      <div class="row" id="second_row">
+
+        <div class="col class_cards">
+        <a href="/classes/#reckless" class="card index_page_card">
+          <img
+            src="/images/Reckless-Aggressive-class.png"
+            class="icons"
+            alt="logo"
+          />
+          <h3> Reckless/Aggressive</h3>
+          <p>Learn more</p>
+        </a>
+      </div>
+
+      <div class="col class_cards">
+        <a href="/classes/#in-car" class="card index_page_card">
+          <img
+            src="/images/license-icon.png"
+            class="icons"
+            alt="logo"
+          />
+          <h3>In-Car/On-Road Driver Training</h3>
+          <p>Learn more</p>
+        </a>
+      </div>
+
+      <div class="col class_cards">
+        <a href="/classes/#espanol" class="card index_page_card">
+          <img
+            src="/images/Clases-en-Espanol.png"
+            class="icons"
+            alt="logo"
+          />
+          <h3>Clases en Español</h3>
+          <p>Aprende más</p>
+        </a>
+      </div>
+
     </div>
+    </div> -->
 
 
       <div class="container footer">
