add link to online class wwebsite

--- a/views/classes.ejs
+++ b/views/classes.ejs
@@ -104,7 +104,7 @@
           <p><em>If you are under age 20, this computer-based Driver Improvement Clinic WILL NOT satisfy a Driver Improvement Clinic requirement.</em></p>
           <p><em>You must satisfactorily complete a clinic that provides classroom instruction.</em></p>
           <br>
-          <a href="https://www.va-drivercourses.com/default.php">Start Now</a>
+          <a href="https://www.va-drivercourses.com/clickIn.php?school=59">Start Now</a>
 
         </div>
       </div>
