connect acuity url to classes

--- a/public/master.css
+++ b/public/master.css
@@ -188,6 +188,14 @@ h1 {
   text-align: center;
 }
 
+.calendar {
+  padding: 20px;
+}
+
+.calendar :hover {
+  color: yellow;
+}
+
 p {
   color: black;
 }
