--- a/views/classes.ejs
+++ b/views/classes.ejs
@@ -66,7 +66,7 @@
             (don’t forget your Driver’s License, course fee is collected in cash or money order only)</p>
             <br>
             <div>
-              <h1>Calendar goes here?</h1>
+              <h2 class="calendar"><a href="https://app.acuityscheduling.com/schedule.php?owner=19202093">View Schedule</a></h2>
             </div>
 
         </div>
@@ -104,8 +104,9 @@
           <p><em>If you are under age 20, this computer-based Driver Improvement Clinic WILL NOT satisfy a Driver Improvement Clinic requirement.</em></p>
           <p><em>You must satisfactorily complete a clinic that provides classroom instruction.</em></p>
           <br>
-          <a href="https://www.va-drivercourses.com/clickIn.php?school=59">Start Now</a>
-
+          <div>
+            <h2 class="calendar"><a href="https://www.va-drivercourses.com/clickIn.php?school=59">Start Now</a></h2>
+          </div>
         </div>
       </div>
 
@@ -125,6 +126,10 @@
           </p>
           <p>**If you are less than 18 years old and a required to take a class before returning to the DMV, you can take this 8-hour Driver manual class if you have completed the 36 Hour classroom portion of Driver Education in High school.  Proof that you have completed the 36-hour classroom is required if you are younger than 18, you would need the “PINK Classroom Completion Certificate”.  This is the certificate that should have been issued upon completion of the 36-hour classroom when you were in 10th grade.  If you need one re-issued, the high school P.E. department will usually issue you a duplicate if necessary.
         </p>
+        <div>
+          <h2 class="calendar"><a href="https://app.acuityscheduling.com/schedule.php?owner=19202093">View Schedule</a></h2>
+        </div>
+      
         </div>
       </div>
 
@@ -141,6 +146,9 @@
           </p>
           <p>If you have any questions, please do not hesitate to give us a call!
           </p>
+          <div>
+            <h2 class="calendar"><a href="https://app.acuityscheduling.com/schedule.php?owner=19202093">View Schedule</a></h2>
+          </div>
         </div>
       </div>
 
@@ -168,6 +176,9 @@
           <p>Bypass Class 
             If you would like to Bypass the 60 Day holding for a learners permit or just avoid having to take your final road examination at the DMV you must complete the same requirements of driver education that a teenager would need to complete.  This class consists of 12 hours of one on one instruction, as well as our instructor providing the Final Road Examination.  When the student completes the required time and road test successfully, they will be issued a DMV Adult Waiver.  The DMV Adult Waiver allows you to avoid holding your learners permit for 60 days as well as avoiding the final road examination at the DMV.  The cost of this class is $450.00.  If you have any questions, please don not hesitate to call our office at (703) 730-8525.
           </p>
+          <div>
+            <h2 class="calendar"><a href="https://app.acuityscheduling.com/schedule.php?owner=19202093">View Schedule</a></h2>
+          </div>
         </div>
       </div>
 
@@ -189,7 +200,9 @@
             <label>571 285-1521</label>
           </a>. Si no está disponible para responder, deje un mensaje y rápidamente le devolverá la llamada.</p>
           <p>NO OFRECEMOS clases de CDL o Motocicleta</p>
-
+          <div>
+            <h2 class="calendar"><a href="https://app.acuityscheduling.com/schedule.php?owner=19202093">Ver Horario</a></h2>
+          </div>
         </div>
       </div>
 
